--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongodb": "^3.0.5",
-    "mongoose": "^5.0.14"
+    "mongoose": "^5.0.14",
+    "validator": "^9.4.1"
   },
   "devDependencies": {
     "expect": "^22.4.3",
