--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha server/**/*.test.js",
+    "test": "mocha server/**/*.test.js --timeout=0",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "keywords": [],
